update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-shrine_72175
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 72175-h/images/cover.jpg
 creator:
   author:
     agent_name: Sheldon, Walter J.
@@ -11,6 +14,8 @@ creator:
     gutenberg_agent_id: '33576'
     url: http://www.gutenberg.org/2009/agents/33576
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/72175#The-shrine
 gutenberg_issued: '2023-11-19'
 identifiers:
   gutenberg: '72175'
